Fixed the errors that was making the sidebar unresponsive

--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -9,7 +9,7 @@ body.no-scroll {
   overflow: hidden;
 }
 
-.topbar {
+.top-bar {
   display: flex;
   background: #fff;
   align-items: center;
@@ -43,7 +43,7 @@ body.no-scroll {
   overflow-y: auto;
 }
 
-sidebar.open {
+.sidebar.open {
   left: 0;
 } 
 
