--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -83,7 +83,7 @@ display: none;
   font-size: 14px;
   margin: 15px 0 5px 15px;
   font: bold;
-  color: #555;
+  color: #fff;
 }
 
 .main-content {
