Added comments to show where the sidebar code starts and ends on CSS and Javascript

--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -1,3 +1,4 @@
+/* ALL THE CODE THAT STARTS HERE IS FOR THE SIDEBAR */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -105,3 +106,4 @@ display: none;
 .overlay.active {
   display: block;
 }
+/*SIDEBAR CODE ENDS HERE*/
