--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -93,7 +93,7 @@ display: none;
 .nav-links a {
   display: block;
   padding: 10px 15px;
-  color: #000;
+  color: var(--text-color);
   text-decoration: none;
   border-radius: 8px;
 }
@@ -149,13 +149,18 @@ body {
 }
 
 .nav-links a:hover {
-  background-color: var(--link-hover);
+  background-color: var(--link-hover-color);
 }
 
 /* OVERRIDES DARK MODE THEME */
 body.dark-mode {
   background-color: #121212;
   color: #ffffff
+}
+
+body.dark-mode .main-content {
+  background-color: #121212;
+  color: #ffffff;
 }
 
 body.dark-mode .sidebar {
@@ -183,7 +188,7 @@ body.dark-mode .section-title {
 {
     #theme-toggle {
         font-size: 12px;
-        padding: 6ppx 10px
+        padding: 6px 10px
     }
 }
 /* CODE ENDS HERE */
