--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -78,9 +78,9 @@ body.dark-mode .top-bar .logo {
 .sidebar {
   position: fixed;
   top: 50px;
-  left: -240px;
+  right: -240px;
   width: 240px;
-  height: 100%;
+  height: 50%;
   background-color: #fff;
   transition: left 0.3s ease;
   padding: 10px;
