--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -80,7 +80,7 @@ body.dark-mode .top-bar .logo {
   top: 50px;
   left: -240px;
   width: 240px;
-  height: 100%;
+  height: 100vh; /*full viewport height*/
   background-color: #fff;
   transition: left 0.3s ease;
   padding: 10px;
