--- a/Website1/styles.css
+++ b/Website1/styles.css
@@ -78,7 +78,7 @@ body.dark-mode .top-bar .logo {
 .sidebar {
   position: fixed;
   top: 50px;
-  left: -100%; /* Makes sure sidebar is completely hidden no matter the width*/
+  left: -100vw; /* Makes sure sidebar is completely hidden and moved off screen*/
   width: 240px;
   height: 100vh; /*full viewport height*/
   background-color: #fff;
@@ -148,7 +148,7 @@ body.dark-mode .top-bar .logo {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 8;
+  z-index: 9; /* Lower than the sidebar but higher than content */
 }
 
 .overlay.active {
