--- a/Website2/style.css
+++ b/Website2/style.css
@@ -40,7 +40,7 @@ body {
 #top-tab a {
     float: left;
     display: block;
-    width: 33%;
+    width: 33%;                                     /*Width of the hypoerlinks for the top tabs, in orde to add other tabs at the top I will need to edit this width*/
     height: 35px;
     font-weight: 700;
     color: white;
@@ -48,3 +48,34 @@ body {
     text-decoration: none;
     padding-top: 12px;
 }
+
+/* MAIN HOME*/
+
+#main-home {
+    margin-top: 120px;                              /*Leaves space of 120px from top of screen till top of main home section. The 120px is derived from height of header(80px) + height of top tabs (40px) = 120px*/
+}
+
+/* BOTTOM TABS*/
+
+#bottom-tabs {
+    position: fixed;
+    bottom: 0;                                      /*Makes sure tabs are forever at the bottom*/
+    left: 0;
+    z-index: 500;
+    width: 100%;
+    height: 40px;
+    background-color: forestgreen;
+}
+
+#bottom-tabs a {
+    display: block;
+    width: 50%;                                      /*Half of screen width*/
+    height: 35px;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 12px;
+}
+
+
