Added muliple elements to CSS

--- a/Website2/style.css
+++ b/Website2/style.css
@@ -49,59 +49,6 @@ body {
     padding-top: 12px;
 }
 
-/*Suggestions from Copilot to add hover effect on top tabs*/
-#top-tab a:hover {
-    background-color: darkolivegreen;             /*Changes background color of top tabs when hovered*/
-}
-#top-tab a:active {
-    background-color: lightgreen;                 /*Changes background color of top tabs when clicked*/
-}
-#top-tab a:first-child {
-    float: left;                                    /*Aligns the first tab to the left*/
-}
-#top-tab a:last-child {
-    float: right;                                   /*Aligns the last tab to the right*/
-}
-#top-tab a:nth-child(2) {
-    margin: 0 auto;                                 /*Centers the second tab in the middle of the top tabs*/
-}
-#top-tab a:nth-child(2):hover {
-    background-color: darkolivegreen;             /*Changes background color of the second tab when hovered*/
-}
-/**************************** TOP TABS FOR MOBILE **********************/
-@media only screen and (max-width: 600px) {
-    #top-tab a {
-        width: 50%;                                /*Changes the width of the top tabs to 50% for mobile devices*/
-    }
-    #top-tab a:nth-child(2) {
-        width: 100%;                               /*Makes the second tab take up full width on mobile devices*/
-    }
-    #top-tab a:nth-child(2):hover {
-        background-color: darkolivegreen;       /*Changes background color of the second tab when hovered on mobile devices*/
-    }
-}
-/**************************** HEADER AND TOP TABS **********************/
-#header, #top-tab {
-    box-sizing: border-box;                        /*Ensures that padding and border are included in the total width and height calculations*/
-    border-bottom: 1px solid black;              /*Adds a 1px solid black border at the bottom of the header and top tabs*/
-    background-color: forestgreen;               /*Sets the background color of the header and top tabs to forest green*/
-}
-/**************************** HEADER AND TOP TABS FOR MOBILE **********************/
-@media only screen and (max-width: 600px) {
-    #header, #top-tab {
-        height: 60px;                              /*Changes the height of the header and top tabs to 60px for mobile devices*/
-    }
-    #header img {
-        height: 50%;                               /*Adjusts the height of the image in the header for mobile devices*/
-        padding-top: 5px;                          /*Reduces padding at the top of the image in the header for mobile devices*/
-    }
-    #top-tab {
-        height: 30px;                              /*Changes the height of the top tabs to 30px for mobile devices*/
-    }
-}
-
-
-
 /***************************** MAIN HOME **********************/
 
 #main-home {
@@ -154,7 +101,7 @@ body {
 /**************************** MAIN **********************/
 #main {
     margin-top: 119px;                            /*Leaves space of 119px from top of screen till top of main section. The 119px is derived from height of header(80px) + height of top tabs (40px) - 1px border = 119px*/
-    background: url('images/map-blur.png');       /*Sets the background image for the main section*/  
+    background-image: url('images/map-blur.png');       /*Sets the background image for the main section*/  
     background-repeat: repeat-y;                  /*Repeats the image vertically until the full height of the screen*/
 }
 #content {
@@ -172,4 +119,10 @@ a.info-box {
     margin: auto;                                 /*Centers the info box horizontally within its parent element*/
     margin-top: 12;                               /*Adds a a gap of 12px between info boxs*/
     padding: 1px;                                 /*Adds padding of 1px around the content inside the info box*/   
+}
+
+.info-box img {
+    float: left;                                  /*Floats the image to the left side of the info box*/
+    height: 70px;                                  /*Sets the height of the image to 80px*/
+    margin: 10px;                                  /*Adds a right margin of 10px to create space between the image and text*/
 }
