--- a/Website2/style.css
+++ b/Website2/style.css
@@ -55,6 +55,12 @@ body {
     margin-top: 120px;                              /*Leaves space of 120px from top of screen till top of main home section. The 120px is derived from height of header(80px) + height of top tabs (40px) = 120px*/
 }
 
+#main-home img {
+    width: 100%;                                   /*Sets the width of the image to 100% of the parent element*/
+    height: auto;                                  /*Sets the height of the image to auto, maintaining aspect ratio*/
+    overflow: hidden;                              /*Ensures that any overflow content is hidden*/
+}
+
 /**************************** BOTTOM TABS **********************/
 
 #bottom-tab {
