--- a/Website2/style.css
+++ b/Website2/style.css
@@ -172,3 +172,6 @@ a.info-box {
     width: 100%;                                    /*Sets the width of the image to 100% of the parent element*/
 }
 
+#info-box-full h3{
+    text-align: center;
+}
