--- a/Website2/style.css
+++ b/Website2/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 #bottom-tab a {
+    float: left;
     display: block;
     width: 50%;                                    /*Half of screen width*/
     height: 35px;
@@ -137,7 +138,7 @@ a.info-box {
     margin: 10px;                                 /*Adds a right margin of 10px to create space between the image and text*/
 }
 
-.info-box h1 {
+.info-box h3 {
     padding: 0;                                    
     margin-bottom: 0;                             /*Removes default margin from the heading*/
     width: 90%;
